tests/flow_errors/missing_required_argument/error.txt
Error: 
    2 | args
    3 |   required
      |   ^^^^^^^^ Missing required argument: required